# lewsql

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  lewsql.pro  qt.xml  run_build.sh  run_format.sh  run_tests.sh
.cache/clangd/index/: bmanager.cpp.935809F204C46438.idx  bmanager.h.CE47767E4EE28FDB.idx  buffer_manager.h.DB0C8B39A5B70D23.idx  dmanager.cpp.A1C6E14A34F1279F.idx  dmanager.h.92B35D9415272272.idx  run.cpp.C763BFA98423F6F6.idx
.github/workflows/: cmake-ubuntu.yml
buffer_manager/: CMakeLists.txt  README.md
buffer_manager/src/: bmanager.cpp  bmanager.h  buffer_manager.cpp  buffer_manager.h  buffer_manager_error.h  buffer_manager_types.h  buffer_page.h  mem_pool.h  memory_pool.cpp  memory_pool.h
buffer_manager/src/buffer_page_tracker/: bitmap_tracker.cpp  bitmap_tracker.h  buffer_page_tracker.h
buffer_manager/src/headers/: buffer_manager.h
buffer_manager/src/mem/: buffer_page_allocator.cpp  buffer_page_allocator.h
buffer_manager/src/replacement/: dumb_alg.cpp  dumb_alg.h  lru.cpp  lru.h  replacement_alg.h
buffer_manager/test/: buffer_manager_test.cpp  buffer_page_test.cpp  constants.h  io_test.cpp  memory_pool_test.cpp  pinning_1.cpp  pinning_test.cpp
compiler/: CMakeLists.txt
compiler/src/char_stream/: char_stream.cpp  char_stream.h
compiler/src/lexer/: lexer.cpp  lexer.h
disk_manager/: CMakeLists.txt
disk_manager/src/: constants.h  disk_manager.h  disk_manager_error.h  disk_manager_types.h  dmanager.cpp  dmanager.h
disk_manager/src/headers/: disk_manager.h
disk_manager/src/impl/: posix_disk.cpp  posix_disk.h  posix_disk_manager.cpp  posix_disk_manager.h  posix_dmanager.cpp  posix_dmanager.h
disk_manager/test/: disk_manager_test.cpp  google1_test.cpp  google_test.cpp  posix_disk_test.cpp
driver/: CMakeLists.txt
driver/src/: run.cpp
organizer_manager/: CMakeLists.txt
organizer_manager/src/: constants.h  heap.cpp  heap.h  organizer.h  organizer_error.h  tuple.cpp  tuple.h
organizer_manager/src/types/: array_type.h  tuple_types.h  type.cpp  type.h  type_error.h  uint16_t_type.cpp  uint16_t_type.h  uint32_t_type.cpp  uint32_t_type.h  uint8_t_type.cpp  uint8_t_type.h
organizers/: CMakeLists.txt
organizers/src/: constants.h  heap.cpp  heap.h  organizer.h  organizer_error.h  tuple.cpp  tuple.h
organizers/src/types/: bool_type.h  tuple_types.h  type.cpp  type.h  uint16_t_type.h  uint32_t_type.h  uint8_t_type.cpp
struct_manager/: CMakeLists.txt
test_helper/: .CMakeLists.txt.swp  CMakeLists.txt
test_helper/src/: register_test.cpp  register_test.h
tests/: CMakeLists.txt
tests/src/: entry.cpp  tests_helper.cpp  tests_helper.h
tests/src/disk_manager/: posix_disk_manager_test.cpp
